test/simple/typeerrors/Heuristics/AppInsert2.hs
module AppInsert2 where

sumInts :: [Int] -> Int
sumInts xs = foldr (+) xs
